--- a/package.json
+++ b/package.json
@@ -4,14 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "tests": " npx playwright test"
+    "tests": " npx playwright test",
+    "lint": "npx eslint ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@eslint/js": "^9.26.0",
     "@playwright/test": "^1.51.1",
-    "@types/node": "^22.14.1"
+    "@types/node": "^22.14.1",
+    "eslint": "^9.26.0",
+    "eslint-plugin-playwright": "^2.2.0",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.32.0"
   },
   "dependencies": {
     "dotenv": "^16.5.0"
