--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -19,10 +19,10 @@ jobs:
       run: npx playwright install --with-deps
     - name: Run Playwright tests
       run: npx playwright test --project=chromium
-    - name: Run auth setup to generate session
-      run: npx playwright test tests/auth/auth.login.spec.ts
-    - name: Run all other tests
-      run: npx playwright test --exclude tests/auth/auth.login.spec.ts
+    # - name: Run auth setup to generate session
+    #   run: npx playwright test tests/auth/auth.login.spec.ts
+    # - name: Run all other tests
+    #   run: npx playwright test --exclude tests/auth/auth.login.spec.ts
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
